[package]
name = "afch-logger"
version = "0.2.0"
edition = "2021"
description = "Logger for Azure Function Custom Handler"
license = "MIT OR Apache-2.0"
keywords = [ "azure", "serverless", "logger" ]
repository = "https://github.com/Jason5Lee/afch-logger"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
base64 = "0.13"
